# anty-if-python

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  gilded_rose.py  inventory.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: mutants.yml  python-app.yml  tests.yml
anty_if_course_code_python/: gilded_rose.py  inventory.py
anty_if_course_code_python/tests/: test_anty_if_course_code_python.py  test_gilded_rose.py
anty_if_python/: gilded_rose.py  inventory.py
anty_if_python/tests/: test_gilded_rose.py
tests/: test_anty_if_course_code_python.py  test_fixture.py  test_gilded_rose.py  texttest_fixture.py
