[tool.poetry]
name = "anty-if-course-code-python"
version = "0.1.0"
description = ""
authors = ["Izabela Kowal <izabelakowal@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[cosmic-ray]
module-path = "anty_if_course_code_python"
python-version = "3.6.9"
timeout = 5.0
exclude-modules = ["anty_if_course_code_python/tests"]
test-command = "pytest"

[cosmic-ray.execution-engine]
name = "local"

[cosmic-ray.cloning]
method = "copy"
commands = []
